[project]
name = "placeholder-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
test = [
    "pytest>=8.4.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E203"]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
